01_Templates/service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: yamltest1 
  labels: 
    app: yamltest1 
spec: 
  selector: 
    app: yamltest1 
  ports: 
    - protocol: TCP 
      port: 8080 
      targetPort: 8080
