01_Templates/route.yaml
apiVersion: route.openshift.io/v1 
kind: Route 
metadata: 
  name: yamltest1 
spec: 
  to: 
    kind: Service 
    name: yamltest1 
  port: 
    targetPort: 8080 
  tls: 
    termination: edge
